// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element it works 1`] = `
Object {
  "attributes": Object {
    "data-i18n": "en-us@test",
  },
  "tag": "span",
}
`;

exports[`element it works 2`] = `
Object {
  "attributes": Object {
    "data-i18n": "sv-se@home/intro",
  },
  "tag": "span",
}
`;

exports[`get it calls the callback synchronously if the node already exists 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`get it handles error status codes 1`] = `
[Error: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: 500 <mock.statusText>
Error: Unexpected response status code. Got 500 but expected 200 <= status < 400.]
`;

exports[`get it handles invalid JSON 1`] = `
[SyntaxError: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: 200 <mock.statusText>
SyntaxError: Unexpected end of JSON input]
`;

exports[`get it handles missing node in response 1`] = `[Error: Missing result for node: i18n://en-us@test.txt]`;

exports[`get it handles rejected requests 1`] = `
[Error: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: undefined
Error: Network error]
`;

exports[`get it respects options.baseUrl: api call 1`] = `
Array [
  Array [
    "http://example.com/interal/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "default",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`get it works 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`getBatched it calls the callback synchronously if the node already exists 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`getBatched it handles error status codes 1`] = `
[Error: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: 500 <mock.statusText>
Error: Unexpected response status code. Got 500 but expected 200 <= status < 400.]
`;

exports[`getBatched it handles invalid JSON 1`] = `
[SyntaxError: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: 200 <mock.statusText>
SyntaxError: Unexpected end of JSON input]
`;

exports[`getBatched it handles rejected requests 1`] = `
[Error: Djedi API error for request: POST /djedi/load_many
RequestData sent: {
  "i18n://en-us@test.txt": "default"
}
Response: undefined
Error: Network error]
`;

exports[`getBatched it respects options.baseUrl: api call 1`] = `
Array [
  Array [
    "http://example.com/interal/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "default",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`getBatched it uses no timeout if batchInterval=0: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`getBatched it uses no timeout if batchInterval=0: callback call 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "test",
    },
  ],
]
`;

exports[`getBatched it works: api calls (one request for 1 & 2, one for 3) 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@1.txt": null,
        "i18n://en-us@2.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": Object {
        "i18n://en-us@3.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`getBatched it works: callback calls 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@1.txt",
      "value": "1",
    },
  ],
  Array [
    Object {
      "uri": "i18n://en-us@1.txt",
      "value": "1",
    },
  ],
  Array [
    Object {
      "uri": "i18n://en-us@1.txt",
      "value": "1",
    },
  ],
  Array [
    Object {
      "uri": "i18n://en-us@2.txt",
      "value": "2",
    },
  ],
  Array [
    Object {
      "uri": "i18n://en-us@3.txt",
      "value": "3",
    },
  ],
]
`;

exports[`options.uri it works: callback calls 1`] = `
Array [
  Array [
    Object {
      "uri": "scheme<SCHEME>namespace<NAMESPACE>test<EXT>ext<VERSION>version",
      "value": "text1",
    },
  ],
  Array [
    Object {
      "uri": "scheme<SCHEME>namespace<NAMESPACE>test<EXT>ext<VERSION>version",
      "value": "text1",
    },
  ],
  Array [
    Object {
      "uri": "scheme<SCHEME>namespace<NAMESPACE>test<EXT>md<VERSION>version",
      "value": "text2",
    },
  ],
  Array [
    Object {
      "uri": "scheme<SCHEME>namespace<NAMESPACE>test<EXT>md<VERSION>version",
      "value": "text2",
    },
  ],
  Array [
    Object {
      "uri": "scheme2<SCHEME>namespace2<NAMESPACE>test<EXT>ext<VERSION>version",
      "value": "text3",
    },
  ],
  Array [
    Object {
      "uri": "scheme2<SCHEME>namespace3<NAMESPACE>home<PATH>test<EXT>html<VERSION>5",
      "value": "text4",
    },
  ],
]
`;

exports[`reportRenderedNode and reportRemovedNode reportRenderedNode warns about rendering nodes with different defaults: console.warn 1`] = `
Array [
  Array [
    "djedi-react: Rendering a node with with a different default value. That default will be ignored.",
    Object {
      "next": "other default",
      "prev": "default",
      "uri": "i18n://en-us@test.txt",
    },
  ],
  Array [
    "djedi-react: Rendering a node with with a different default value. That default will be ignored.",
    Object {
      "next": undefined,
      "prev": "default",
      "uri": "i18n://en-us@test.txt",
    },
  ],
]
`;

exports[`reportRenderedNode and reportRemovedNode reportRenderedNode warns about rendering nodes with different defaults: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": "default",
}
`;

exports[`reportRenderedNode and reportRemovedNode they work 1`] = `Object {}`;

exports[`reportRenderedNode and reportRemovedNode they work 2`] = `
Object {
  "i18n://en-us@first.txt": "first",
  "i18n://en-us@second.txt": "second",
}
`;

exports[`reportRenderedNode and reportRemovedNode they work 3`] = `
Object {
  "i18n://en-us@first.txt": "first",
  "i18n://en-us@second.txt": "second",
}
`;

exports[`reportRenderedNode and reportRemovedNode they work 4`] = `
Object {
  "i18n://en-us@second.txt": "second",
}
`;

exports[`reportRenderedNode and reportRemovedNode they work 5`] = `Object {}`;
